--- a/assets/css/dark-mode-preview.scss
+++ b/assets/css/dark-mode-preview.scss
@@ -11,6 +11,7 @@ $logo: "{{ site.logo | absolute_url }}";
 // Import external dependencies
 //
 
+@import "./vendor/normalize.scss/normalize.scss";
 
 //
 // Import Just the Docs scss
