--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,9 +99,8 @@ layout: table_wrappers
     </div>
   </div>
 
-  <script type="text/javascript" src="/assets/js/lightbox.js"></script>
-  <link rel="stylesheet" href="/assets/css/lightbox.css">
+  <script type="text/javascript" src="../assets/js/lightbox.js"></script>
+  <link rel="stylesheet" href="../assets/css/lightbox.css">
 
-  
 </body>
 </html>
