--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,5 +99,7 @@ layout: table_wrappers
     </div>
   </div>
 
+  <script type="text/javascript" src="/blog/assets/js/lightbox.js"></script>
+  <link rel="stylesheet" href="/blog/assets/css/lightbox.css">
 </body>
 </html>
