--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,7 +99,7 @@ layout: table_wrappers
     </div>
   </div>
 
-  <script type="text/javascript" src="{{ '/assets/js/lightbox.css' | relative_url }}"></script>
+  <script type="text/javascript" src="{{ '/assets/js/lightbox.js' | relative_url }}"></script>
   <link rel="stylesheet" href="/blog/assets/css/lightbox.css">
 
 </body>
