--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,7 +100,7 @@ layout: table_wrappers
   </div>
 
   <script type="text/javascript" src="{{ '/assets/js/lightbox.js' | relative_url }}"></script>
-  <link rel="stylesheet" href="/blog/assets/css/lightbox.css">
+  <link rel="stylesheet" href="{{ '/assets/css/lightbox.css' | relative_url }}">
 
 </body>
 </html>
