--- a/_sass/overrides.scss
+++ b/_sass/overrides.scss
@@ -1,3 +1,15 @@
 //
 // Custom overrides from a user.
 //
+
+ul {
+  .image-gallery {
+    list-style: none;
+  }
+}
+
+li {
+  .image-gallery {
+    list-style: none;
+  }
+}
