--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -61,6 +61,13 @@
         position: absolute;
         margin-left: -1.4em;
         color: $grey-dk-000;
+        content: "•";
+      }
+    > li.image-gallery {
+      &::before {
+        position: absolute;
+        margin-left: -1.4em;
+        color: $grey-dk-000;
       }
     }
   }
