--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -66,6 +66,19 @@
     }
   }
 
+  ul.image-gallery {
+    list-style: none;
+
+    > li {
+      &::before {
+        position: absolute;
+        margin-left: -1.4em;
+        color: $grey-dk-000;
+        content: "";
+      }
+    }
+  }
+
   .task-list {
     padding-left: 0;
   }
