--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@ layout: table_wrappers
         {% include nav.html %}
       </div>
       <footer class="site-footer">
-        <p class="text-small text-grey-dk-000 mb-4">View <a href="https://github.com/pmarsceill/just-the-docs">Dentistry Documentation and Clinical Notes.</a></p>
+        <p class="text-small text-grey-dk-000 mb-4">View <a href="https://github.com/pmarsceill/just-the-docs">Dental Index.</a></p>
       </footer>
     </div>
     <div class="main-content-wrap js-main-content" tabindex="0">
@@ -44,7 +44,7 @@ layout: table_wrappers
           {% if site.aux_links != nil %}
             <ul class="list-style-none text-small aux-nav">
               {% for link in site.aux_links %}
-                <li class="d-inline-block my-0{% unless forloop.last %} mr-2{% endunless %}"><a href="{{ link.last }}">{{ link.first }}</a></li>
+                <li class="d-inline-block my-0{% unless forloop.last %} mr-2{% endunless %}"><p>View&nbsp;<a href="{{ link.last }}">{{ link.first }}</a></p></li>
               {% endfor %}
             </ul>
           {% endif %}
